--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Tony Beacock - Portfolio</title>
+<link href="css/style.css" rel="stylesheet" type="text/css"/>
+</head>
 
+<body>
+
+</body>
+
+</html>
