--- a/index.html
+++ b/index.html
@@ -12,7 +12,20 @@
 </head>
 
 <body>
-
+<header>
+    <div class="container">
+        <div class="row">
+        <a href=""><img class="logo" src="images/logo.png" alt="logo"></a>
+        <nav>
+            <ul>
+                <li><a href="">Home</li>
+                <li><a href="">Portfolio</li>
+                <li><a href="">Contact</li>
+            </ul>
+        </nav>
+    </div>
+    </div>
+</header>
 </body>
 
 </html>     
