--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <header>
     <div class="container">
         <div class="row">
-        <a href=""><img class="logo" src="images/logo.png" alt="logo"></a>
+        <a href=""><img class="logo" src="/images/logo.png" alt="logo"></a>
         <nav>
             <ul>
                 <li><a href="">Home</li>
