--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <title>Tony Beacock - Portfolio</title>
     <link href="css/style.css" rel="stylesheet" type="text/css"/>
+    <!-- Font Awesome Icons-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <!-- jQuery library -->
@@ -18,7 +20,11 @@
         <a href=""><img class="logo" width="10%" height="10%" src="/images/Logo.PNG" alt="Logo"></a>
         <nav>
             <ul>
-                <li><a href="">Home</li>
+                <li>
+                    <i class="fa fa-home"></i>
+                    <a href="">Home</a>
+                </li>
+                
                 <li><a href="">Portfolio</li>
                 <li><a href="">Contact</li>
             </ul>
@@ -26,6 +32,20 @@
     </div>
     </div>
 </header>
+
+<section class="slider">
+    <ul>
+        <li>
+            <h2>Slider</h2>
+        </li>
+        <li>
+            <h2>Slider</h2>
+        </li>
+        <li>
+            <h2>Slider</h2>
+        </li>
+    </ul>
+</section>
 </body>
 
 </html>     
