--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav>
             <ul>
                 <li>
-                    <i class="fa fa-home"></i>
+                    <!-- <i class="fa fa-home"></i> -->
                     <a href="">Home</a>
                 </li>
                 
