--- a/index.html
+++ b/index.html
@@ -20,11 +20,7 @@
         <a href=""><img class="logo" width="10%" height="10%" src="/images/Logo.PNG" alt="Logo"></a>
         <nav>
             <ul>
-                <li>
-                    <!-- <i class="fa fa-home"></i> -->
-                    <a href="">Home</a>
-                </li>
-                
+                <li><a href="">Home</a></li>
                 <li><a href="">Portfolio</li>
                 <li><a href="">Contact</li>
             </ul>
