Updated the website - started the redesign

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <title>Tony Beacock - Portfolio</title>
     <link href="css/style.css" rel="stylesheet" type="text/css"/>
+    <!--'VT323' Font-->
+    <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
     <!-- Font Awesome Icons-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <!-- Latest compiled and minified CSS -->
@@ -14,34 +16,76 @@
 </head>
 
 <body>
-<header>
-    <div class="container">
-        <div class="row">
-        <a href=""><img class="logo" width="10%" height="10%" src="/images/Logo.PNG" alt="Logo"></a>
-        <nav>
-            <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">Portfolio</li>
-                <li><a href="">Contact</li>
-            </ul>
-        </nav>
-    </div>
-    </div>
-</header>
+    <header>
+        <div class="container">
+            <div class="row">
+                <a href=""><img class="logo" width="10%" height="10%" src="/images/Logo.PNG" alt="Logo"></a>
+                <nav>
+                    <ul>
+                        <li><a href="">LinkedIn</a></li>
+                        <li><a href="">GitHub</a></li>
+                        <!-- <li><a href="">Portfolio</li>
+                        <li><a href="">Contact</li> -->
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
 
-<section class="slider">
-    <ul>
-        <li>
-            <h2>Slider</h2>
-        </li>
-        <li>
-            <h2>Slider</h2>
-        </li>
-        <li>
-            <h2>Slider</h2>
-        </li>
-    </ul>
-</section>
+    <section class="title">
+        <h1>Anthony Beacock</h1>
+        <h2>Software Developer. Games Programmer.</h2>
+
+        <img src="/images/circle.png">
+    </section>
+
+    <section class="skills">
+        <div class="intro-row">
+            <h2>Hello, I'm Anthony, but you can call me Tony.</h2>
+            <p>I am currently studying a MEng in Computer Science with Games Development at The Univeristy of Hull.</p>
+        </div>
+
+        <div class="skills-left">
+            <h1>Skills</h1>
+            <ul>
+                <li>C#</li>
+                <li>C++</li>
+                <li>JavaScript</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Java</li>
+            </ul>
+        </div>
+        <div class="skills-right">
+                <h1>Interests</h1>
+                <ul>
+                </ul>
+            </div>
+    </section>
+
+    <section class="projects">
+       <div>
+           <h1>Recent Projects</h1>
+
+           <div class="row"> 
+                <div class="column">
+                    <a href=""> <img src="circle.jpg"></a>
+                    <a href=""> <img src="circle.jpg"></a>
+                    <a href=""> <img src="circle.jpg"></a>
+                </div>
+                <div class="column">
+                    <a href=""> <img src="circle.jpg"></a>
+                    <a href=""> <img src="circle.jpg"></a>
+                    <a href=""> <img src="circle.jpg"></a>
+                </div> 
+                <div class="column">
+                    <a href=""> <img src="circle.jpg"></a>
+                    <a href=""> <img src="circle.jpg"></a>
+                    <a href=""> <img src="circle.jpg"></a>
+                </div>
+              </div>
+       </div>
+    </section>
 </body>
 
 </html>     
