--- a/index.html
+++ b/index.html
@@ -69,19 +69,19 @@
 
            <div class="row"> 
                 <div class="column">
-                    <a href=""> <img src="/images/circle.jpg"></a>
-                    <a href=""> <img src="/images/circle.jpg"></a>
-                    <a href=""> <img src="/images/circle.jpg"></a>
+                    <a href=""> <img src="/images/circle.png"></a>
+                    <a href=""> <img src="/images/circle.png"></a>
+                    <a href=""> <img src="/images/circle.png"></a>
                 </div>
                 <div class="column">
-                    <a href=""> <img src="/images/circle.jpg"></a>
-                    <a href=""> <img src="/images/circle.jpg"></a>
-                    <a href=""> <img src="/images/circle.jpg"></a>
+                    <a href=""> <img src="/images/circle.png"></a>
+                    <a href=""> <img src="/images/circle.png"></a>
+                    <a href=""> <img src="/images/circle.png"></a>
                 </div> 
                 <div class="column">
-                    <a href=""> <img src="/images/circle.jpg"></a>
-                    <a href=""> <img src="/images/circle.jpg"></a>
-                    <a href=""> <img src="/images/circle.jpg"></a>
+                    <a href=""> <img src="/images/circle.png"></a>
+                    <a href=""> <img src="/images/circle.png"></a>
+                    <a href=""> <img src="/images/circle.png"></a>
                 </div>
               </div>
        </div>
