Added overlap to skills/ interests section

--- a/index.html
+++ b/index.html
@@ -40,27 +40,31 @@
     </section>
 
     <section class="skills">
-        <div class="intro-row">
-            <h2>Hello, I'm Anthony, but you can call me Tony.</h2>
-            <p>I am currently studying a MEng in Computer Science with Games Development at The Univeristy of Hull.</p>
-        </div>
+        <div class="grid-container">
 
-        <div class="skills-left">
-            <h1>Skills</h1>
-            <ul>
-                <li>C#</li>
-                <li>C++</li>
-                <li>JavaScript</li>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>Java</li>
-            </ul>
-        </div>
-        <div class="skills-right">
-                <h1>Interests</h1>
+            <div class="intro-row">
+                <h2>Hello, I'm Anthony, but you can call me Tony.</h2>
+                <p>I am currently studying a MEng in Computer Science with Games Development at The Univeristy of Hull.</p>
+            </div>
+
+            <div class="skills-left">
+                <h1>Skills</h1>
                 <ul>
+                    <li>C#</li>
+                    <li>C++</li>
+                    <li>JavaScript</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Java</li>
+
                 </ul>
             </div>
+            <div class="skills-right">
+                <h1>Interests</h1>
+                 <ul>
+                </ul>
+            </div>
+        </div>
     </section>
 
     <section class="projects">
