--- a/index.html
+++ b/index.html
@@ -71,23 +71,33 @@
        <div>
            <h1>Recent Projects</h1>
 
-           <div class="row"> 
+           <div class="project-grid">
+
+                <a class="project-image" href=""> <img src="/images/circle.png"></a>
+                <a class="project-image1" href=""> <img src="/images/circle.png"></a>
+                <a class="project-image2" href=""> <img src="/images/circle.png"></a>
+                <a class="project-image3" href=""> <img src="/images/circle.png"></a>
+                <a class="project-image4" href=""> <img src="/images/circle.png"></a>
+                <a class="project-image5" href=""> <img src="/images/circle.png"></a>
+
+           </div>
+           <!-- <div class="row"> 
                 <div class="column">
-                    <a href=""> <img src="/images/circle.png"></a>
-                    <a href=""> <img src="/images/circle.png"></a>
-                    <a href=""> <img src="/images/circle.png"></a>
+                    <a class="project-image" href=""> <img src="/images/circle.png"></a>
+                    <a class="project-image" href=""> <img src="/images/circle.png"></a>
+                    <a class="project-image"  href=""> <img src="/images/circle.png"></a>
                 </div>
                 <div class="column">
-                    <a href=""> <img src="/images/circle.png"></a>
-                    <a href=""> <img src="/images/circle.png"></a>
-                    <a href=""> <img src="/images/circle.png"></a>
+                    <a class="project-image"  href=""> <img src="/images/circle.png"></a>
+                    <a class="project-image"  href=""> <img src="/images/circle.png"></a>
+                    <a class="project-image"  href=""> <img src="/images/circle.png"></a>
                 </div> 
                 <div class="column">
-                    <a href=""> <img src="/images/circle.png"></a>
-                    <a href=""> <img src="/images/circle.png"></a>
-                    <a href=""> <img src="/images/circle.png"></a>
+                    <a class="project-image"  href=""> <img src="/images/circle.png"></a>
+                    <a class="project-image"  href=""> <img src="/images/circle.png"></a>
+                    <a class="project-image"  href=""> <img src="/images/circle.png"></a>
                 </div>
-              </div>
+              </div> -->
        </div>
     </section>
 </body>
