--- a/index.html
+++ b/index.html
@@ -100,6 +100,17 @@
               </div> -->
        </div>
     </section>
+    
+    <footer>
+        <div class="wrapper">
+            <!-- <nav> -->
+                <ul>
+                    <li>Copyright Anthony Beacock 2019</li>
+                    <!-- <li><a href="">LinkedIn</a></li> -->
+                    <!-- <li><a href="">GitHub</a></li> -->
+                </ul>
+            <!-- </nav> -->
+        </div>
+    </footer>
 </body>
-
 </html>     
