--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <a href=""><img class="logo" width="10%" height="10%" src="/images/Logo.PNG" alt="Logo"></a>
                 <nav>
                     <ul>
-                        <li><a href="">LinkedIn</a></li>
-                        <li><a href="">GitHub</a></li>
+                        <li><a href="https://uk.linkedin.com/in/anthonybeacock">LinkedIn</a></li>
+                        <li><a href="https://github.com/AnthonyBeacock">GitHub</a></li>
                         <!-- <li><a href="">Portfolio</li>
                         <li><a href="">Contact</li> -->
                     </ul>
@@ -73,12 +73,12 @@
 
            <div class="project-grid">
 
-                <a class="project-image" href=""> <img src="/images/circle.png"></a>
-                <a class="project-image1" href=""> <img src="/images/circle.png"></a>
-                <a class="project-image2" href=""> <img src="/images/circle.png"></a>
-                <a class="project-image3" href=""> <img src="/images/circle.png"></a>
-                <a class="project-image4" href=""> <img src="/images/circle.png"></a>
-                <a class="project-image5" href=""> <img src="/images/circle.png"></a>
+                <a class="project-image" class="project-image" href=""> <img src="/images/circle.png"></a>
+                <a id="project-image1" class="project-image" href=""> <img src="/images/circle.png"></a>
+                <a id="project-image2" class="project-image" href=""> <img src="/images/circle.png"></a>
+                <a id="project-image3" class="project-image" href=""> <img src="/images/circle.png"></a>
+                <a id="project-image4" class="project-image" href=""> <img src="/images/circle.png"></a>
+                <a id="project-image5" class="project-image" href=""> <img src="/images/circle.png"></a>
 
            </div>
            <!-- <div class="row"> 
