--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
                 <a class="project-image" class="project-image" href=""> <img src="/images/projects/wakeup.png"></a>
                 <a id="project-image1" class="project-image" href=""> <img src="/images/projects/beverleygate.png"></a>
                 <a id="project-image2" class="project-image" href=""> <img src="/images/projects/glslteapots.png"></a>
-                <a id="project-image3" class="project-image" href=""> <img src="/images/circle.png"></a>
+                <!-- <a id="project-image3" class="project-image" href=""> <img src="/images/circle.png"></a>
                 <a id="project-image4" class="project-image" href=""> <img src="/images/circle.png"></a>
-                <a id="project-image5" class="project-image" href=""> <img src="/images/circle.png"></a>
+                <a id="project-image5" class="project-image" href=""> <img src="/images/circle.png"></a> -->
 
            </div>
            <!-- <div class="row"> 
