--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Tony Beacock - Portfolio</title>
-    <link href="css/style.css" rel="stylesheet" type="text/css"/>
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
     <!--'VT323' Font-->
     <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
     <!-- Font Awesome Icons-->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+        crossorigin="anonymous">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <!-- jQuery library -->
@@ -61,17 +63,17 @@
             </div>
             <div class="skills-right">
                 <h1>Interests</h1>
-                 <ul>
+                <ul>
                 </ul>
             </div>
         </div>
     </section>
 
     <section class="projects">
-       <div>
-           <h1>Recent Projects</h1>
+        <div>
+            <h1>Recent Projects</h1>
 
-           <div class="project-grid">
+            <div class="project-grid">
 
                 <a class="project-image" class="project-image" href=""> <img src="/images/projects/wakeup.png"></a>
                 <a id="project-image1" class="project-image" href=""> <img src="/images/projects/beverleygate.png"></a>
@@ -80,8 +82,8 @@
                 <a id="project-image4" class="project-image" href=""> <img src="/images/circle.png"></a>
                 <a id="project-image5" class="project-image" href=""> <img src="/images/circle.png"></a> -->
 
-           </div>
-           <!-- <div class="row"> 
+            </div>
+            <!-- <div class="row"> 
                 <div class="column">
                     <a class="project-image" href=""> <img src="/images/circle.png"></a>
                     <a class="project-image" href=""> <img src="/images/circle.png"></a>
@@ -98,19 +100,20 @@
                     <a class="project-image"  href=""> <img src="/images/circle.png"></a>
                 </div>
               </div> -->
-       </div>
+        </div>
     </section>
-    
+
     <footer>
         <div class="wrapper">
             <!-- <nav> -->
-                <ul>
-                    <li>Copyright Anthony Beacock 2019</li>
-                    <!-- <li><a href="">LinkedIn</a></li> -->
-                    <!-- <li><a href="">GitHub</a></li> -->
-                </ul>
+            <ul>
+                <li>Copyright Anthony Beacock 2019</li>
+                <!-- <li><a href="">LinkedIn</a></li> -->
+                <!-- <li><a href="">GitHub</a></li> -->
+            </ul>
             <!-- </nav> -->
         </div>
     </footer>
 </body>
-</html>     
+
+</html>
