--- a/index.html
+++ b/index.html
@@ -75,7 +75,11 @@
 
             <div class="project-grid">
 
-                <a class="project-image" class="project-image" href=""> <img src="/images/projects/wakeup.png"></a>
+                <a id="project-image" class="project-image" href="">
+                    <img src="/images/projects/wakeup.png">
+                </a>
+
+
                 <a id="project-image1" class="project-image" href=""> <img src="/images/projects/beverleygate.png"></a>
                 <a id="project-image2" class="project-image" href=""> <img src="/images/projects/glslteapots.png"></a>
                 <!-- <a id="project-image3" class="project-image" href=""> <img src="/images/circle.png"></a>
@@ -83,23 +87,6 @@
                 <a id="project-image5" class="project-image" href=""> <img src="/images/circle.png"></a> -->
 
             </div>
-            <!-- <div class="row"> 
-                <div class="column">
-                    <a class="project-image" href=""> <img src="/images/circle.png"></a>
-                    <a class="project-image" href=""> <img src="/images/circle.png"></a>
-                    <a class="project-image"  href=""> <img src="/images/circle.png"></a>
-                </div>
-                <div class="column">
-                    <a class="project-image"  href=""> <img src="/images/circle.png"></a>
-                    <a class="project-image"  href=""> <img src="/images/circle.png"></a>
-                    <a class="project-image"  href=""> <img src="/images/circle.png"></a>
-                </div> 
-                <div class="column">
-                    <a class="project-image"  href=""> <img src="/images/circle.png"></a>
-                    <a class="project-image"  href=""> <img src="/images/circle.png"></a>
-                    <a class="project-image"  href=""> <img src="/images/circle.png"></a>
-                </div>
-              </div> -->
         </div>
     </section>
 
