--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
                 </a>
 
 
-                <a id="project-image1" class="project-image" href=""> <img src="/images/projects/beverleygate.png"></a>
-                <a id="project-image2" class="project-image" href=""> <img src="/images/projects/glslteapots.png"></a>
+                <a class="project-image" href=""> <img src="/images/projects/beverleygate.png"></a>
+                <a class="project-image" href=""> <img src="/images/projects/glslteapots.png"></a>
                 <!-- <a id="project-image3" class="project-image" href=""> <img src="/images/circle.png"></a>
                 <a id="project-image4" class="project-image" href=""> <img src="/images/circle.png"></a>
                 <a id="project-image5" class="project-image" href=""> <img src="/images/circle.png"></a> -->
