--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
             <div class="project-grid">
 
-                <a id="project-image" class="project-image" href="">
+                <a class="project-image" href="">
                     <img src="/images/projects/wakeup.png">
                 </a>
 
