--- a/index.html
+++ b/index.html
@@ -75,11 +75,8 @@
 
             <div class="project-grid">
 
-                <a class="project-image" href="">
-                    <img src="/images/projects/wakeup.png">
-                </a>
-
-
+                <a class="project-image" href=""><img src="/images/projects/wakeup.png"></a>
+                <a class="project-image" href=""><img src="/images/projects/wakeup.png"></a>
                 <a class="project-image" href=""> <img src="/images/projects/beverleygate.png"></a>
                 <a class="project-image" href=""> <img src="/images/projects/glslteapots.png"></a>
                 <!-- <a id="project-image3" class="project-image" href=""> <img src="/images/circle.png"></a>
