update and bug fix (paragraphs had a padding when it was not needed)

--- a/index.html
+++ b/index.html
@@ -73,6 +73,12 @@
         <div>
             <h1>Recent Projects</h1>
 
+            <p>This website - Currently working on</p>
+            <p>Strava Prints - Currently working on </p>
+            <p>RTS Game - Global Game Jam 2019</p>
+            <p>Heirloom Tracker- Currently working on</p>
+            <p>Wetpack Joyride - 3TG</p>
+
             <div class="project-grid">
 
                 <a class="project-image" href=""><img src="/images/projects/wakeup.png"></a>
