--- a/index.html
+++ b/index.html
@@ -74,9 +74,11 @@
             <h1>Recent Projects</h1>
 
             <p>This website - Currently working on</p>
+            <p>Heirloom Tracker- Currently working on</p>
             <p>Strava Prints - Currently working on </p>
             <p>RTS Game - Global Game Jam 2019</p>
-            <p>Heirloom Tracker- Currently working on</p>
+            <p>Raspberry Pi - Currently working on </p>
+            <p>Tilt Game  - Currently working on </p>
             <p>Wetpack Joyride - 3TG</p>
 
             <div class="project-grid">
