--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
 
             <div class="skills-left">
-                <h1>Skills</h1>
+                <h1 width=100%>Skills</h1>
                 <ul>
                     <li>C#</li>
                     <li>C++</li>
@@ -62,7 +62,7 @@
                 </ul>
             </div>
             <div class="skills-right">
-                <h1>Interests</h1>
+                <h1 width=100%>Interests</h1>
                 <ul>
                 </ul>
             </div>
