--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
         <div>
             <h1>Recent Projects</h1>
 
-            <p>This website - Currently working on</p>
+            <a href="/html/project-wakeup.html"><p>This website - Currently working on</p></a>
             <p>Heirloom Tracker- Currently working on</p>
             <p>Strava Prints - Currently working on </p>
             <p>RTS Game - Global Game Jam 2019</p>
             <p>Raspberry Pi - Currently working on </p>
-            <p>Tilt Game  - Currently working on </p>
+            <p>Tilt Game - Currently working on </p>
             <p>Wetpack Joyride - 3TG</p>
 
             <div class="project-grid">
