--- a/html/project-wakeup.html
+++ b/html/project-wakeup.html
@@ -1,11 +1,25 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Wake Up - Three Thing Game (May 2018)</title>
 </head>
+
 <body>
-    
+    <header>Wake Up – Three Thing Game (May 2018)</header>
+    <section class="text">
+
+        <p>The Three Thing Game is a 24-hour Game Jam, hosted by the Computer Science department at the University of
+            Hull.
+            It takes place twice a year. Teams are given three random words which are to be somehow implemented into
+            their game.</p>
+
+
+
+    </section>
+
 </body>
+
 </html>
