--- a/html/project-wakeup.html
+++ b/html/project-wakeup.html
@@ -12,9 +12,11 @@
     <section class="text">
 
         <p>The Three Thing Game is a 24-hour Game Jam, hosted by the Computer Science department at the University of
-            Hull.
-            It takes place twice a year. Teams are given three random words which are to be somehow implemented into
-            their game.</p>
+            Hull. It takes place twice a year. Teams are given three random words which are to be somehow implemented
+            into their game.</p>
+
+        <p>My team consisted of 4 people: Anthony Beacock (myself), Jakob Scrivener, Dean Barnard and Reece Giles (who
+            stayed for the Friday night), and our words were “Hopping”, “Sheeple” and “Building”.</p>
 
 
 
