--- a/html/project-wakeup.html
+++ b/html/project-wakeup.html
@@ -14,12 +14,50 @@
         <p>The Three Thing Game is a 24-hour Game Jam, hosted by the Computer Science department at the University of
             Hull. It takes place twice a year. Teams are given three random words which are to be somehow implemented
             into their game.</p>
-
         <p>My team consisted of 4 people: Anthony Beacock (myself), Jakob Scrivener, Dean Barnard and Reece Giles (who
             stayed for the Friday night), and our words were “Hopping”, “Sheeple” and “Building”.</p>
 
+        <!-- TABLE OF TEAM MEMBERS -->
 
+        <p>After some thought, we decided on creating a game called “Wake Up!”, in which the main character is a sheep
+            that does not conform to his stereotype. The term “Sheeple” referred to people who follow the crowd (like
+            sheep) and aren’t individual in any way.</p>
+        <p>The first part of the game would be a 2D side-scroller platform type game, in which the character has to
+            “hop” from building to building, whilst being chased by the Sheeple. There would also be various “sheeple”
+            stood on some of the rooftops, waiting to kill you. In order to continue unharmed, one must shoot
+            projectiles at them. These projectiles are “Bah’s” which suggests that the character is “Spitting Bah’s”…
+            (Pun Intended!).</p>
+        <p>The levels were tile based. They were initially created by Reece and then later tweaked by Jake. An attempt
+            was made to match the required “hops” between buildings, to the music that a friend of the team (Kieren
+            Goodwin-Green) had made.</p>
+        <p>The mechanics behind the boss level were created by myself. I combined these with the artwork that Jake had
+            previously created.</p>
+        <p>Most of the Boss’ movement consisted of sine waves. One controlled the horizontal movement of the whole
+            body, making it move left and right. Each arm was also controlled by its own sin wave, which made both of
+            them move separately and vertically. This gave the illusion that the boss was more intelligent than it
+            actually was. This very basic AI also made the boss a little more unpredictable, as it would be different
+            every time a user played the game. Each arm had a health of 25 hits, which meant that one would have to aim
+            and attack more individual parts of the boss’ body, rather than shooting aimlessly.</p>
+        <p>Each sin wave used in the game was limited by using variables such as magnitude and frequency. This allowed
+            me to adjust the speed and distance of each object the sin waves controlled.</p>
+        <p>A short video showing various parts of the game has been included below.</p>
+        <p>The creation of this game challenged various skills, both general and technical. Some of the more general of
+            these included creativity, teamwork, working under pressure. Some of the more technical skills were the use
+            of the Unity Engine and Programming in C# language.</p>
+        <p>As always, I enjoyed the Three Thing Game this year, as it was a great opportunity to improve and strengthen
+            skills, whilst having fun in a laid back, friendly but competitive environment.</p>
+        <p>Thank you very much for reading,
+            Tony.</p>
+        <p>Contact Information:
 
+            Anthony Beacock:
+            www.anthonybeacock.wordpress.com
+            www.linkedin.com/in/anthonybeacock
+            Jakob Scrivener:
+            www.linkedin.com/in/jake-scrivener-30319b169/
+            Dean Barnard:
+            Reece Giles:
+            www.linkedin.com/in/reece-giles-699610158/</p>
     </section>
 
 </body>
