--- a/html/project-wakeup.html
+++ b/html/project-wakeup.html
@@ -18,6 +18,28 @@
             stayed for the Friday night), and our words were “Hopping”, “Sheeple” and “Building”.</p>
 
         <!-- TABLE OF TEAM MEMBERS -->
+        <table style="width:100%">
+            <tr>
+                <th>Team Member</th>
+                <th>Role(s)</th>
+            </tr>
+            <tr>
+                <td>Tony (myself)</td>
+                <td>Programming</td>
+            </tr>
+            <tr>
+                <td>Jake</td>
+                <td>Programming and Art</td>
+            </tr>
+            <tr>
+                <td>Dean</td>
+                <td>Programming</td>
+            </tr>
+            <tr>
+                <td>Reece</td>
+                <td>Programming</td>
+            </tr>
+        </table>
 
         <p>After some thought, we decided on creating a game called “Wake Up!”, in which the main character is a sheep
             that does not conform to his stereotype. The term “Sheeple” referred to people who follow the crowd (like
