--- a/html/project-wakeup.html
+++ b/html/project-wakeup.html
@@ -63,6 +63,10 @@
         <p>Each sin wave used in the game was limited by using variables such as magnitude and frequency. This allowed
             me to adjust the speed and distance of each object the sin waves controlled.</p>
         <p>A short video showing various parts of the game has been included below.</p>
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/CuViazyRzFc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+
         <p>The creation of this game challenged various skills, both general and technical. Some of the more general of
             these included creativity, teamwork, working under pressure. Some of the more technical skills were the use
             of the Unity Engine and Programming in C# language.</p>
