--- a/html/project-wakeup.html
+++ b/html/project-wakeup.html
@@ -8,7 +8,9 @@
 </head>
 
 <body>
-    <header>Wake Up – Three Thing Game (May 2018)</header>
+    <header>
+        <h1>Wake Up – Three Thing Game (May 2018)</h1>
+    </header>
     <section class="text">
 
         <p>The Three Thing Game is a 24-hour Game Jam, hosted by the Computer Science department at the University of
